# KML-qPCR

./: KML-qPCR.xmind  README.md  pyproject.toml
archive/: inclsvt_and_dgnrt.py
config/: database.yaml
etc/: software.yaml  template.p3
kml-qpcr/: qpcr_designer.py  qpcr_primer3_design.py  qpcr_primer3_parse.py  qpcr_primer3_primer_to_blast.py  qpcr_primer3_to_blast.py  qpcr_primer_inclusivity.py  run.sh
src/config/: cnfg_database.py  cnfg_software.py  cnfg_taxonomy.py  configure.py  software.py
src/kml_qpcr/: __main__.py  base.py  cli.py  cmd_line.py  cmdline.py  cstm_gnms_load.py  csvd_gene_obtain.py  download.py  downloader.py  entrez_downloader.py  entrez_search.py  gnm_annotate.py  gnm_download.py  gnm_quality_assess.py  inclusivity_and_degenerate.py  primer3_design.py  primer3_parse.py  qpcr_primer3_design.py  qpcr_primer3_parse.py  spec_gene_obtain.py
src/scripts/: merge_csvd_gene_for_blast.py  run.sh
src/utils/: util_command.py  util_file.py  util_write.py
tests/: run.sh  test_configure.py  test_csvd_gene.py  test_gnm_annotate.py  test_gnm_assess.py  test_spec_gene.py  test_taxonomy.py
