[project]
name = "kml-qpcr"
version = "0.1.0"
description = ""
authors = [{ name = "Kristoff", email = "kr1stoff7m@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "biopython (>=1.85,<2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
]

[tool.poetry]
packages = [{ include = "*", from = "src" }, { include = "*", from = "tests" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
